--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,12 @@ dependencies = [
     "pytest>=8.3.5",
     "xopen>=2.0.2",
     "resiliparse>=0.15.2",
+    "warcio>=1.7.4",
+    "ipykernel>=6.29.4",
     "fasttext>=0.9.3",
     "mmh3>=5.1.0",
     "nltk>=3.9.1",
+    "fasttext>=0.9.3",
 ]
 
 [tool.setuptools.packages.find]
